# master-programming-task

lab2/: CMakeLists.txt  README.md  README.rst
lab2/include/: iomanip.hpp
lab2/tests/: iomanip.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: proxy.hpp
lab4/: CMakeLists.txt
lab4/include/: iterator.hpp
lab5/: CMakeLists.txt
lab5/include/: variant.hpp
lab6/: CMakeLists.txt
lab6/include/: json.hpp
lab7/: CMakeLists.txt
lab7/include/: type_map.hpp
